<resources>
    <string name="app_name">Foodiezz</string>

    <!-- Alert -->
    <string name="alert_connection_error">No internet connection!</string>

    <!-- Button -->
    <string name="button_youtube">YOUTUBE</string>
    <string name="button_source">SOURCE</string>

    <!-- Text -->
    <string name="food_category">Western Food Catalogue</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="dot_loading">. . .</string>
    <string name="Ingredients">INGREDIENTS</string>
    <string name="favorite">Favorite</string>
    <string name="about">ABOUT ME</string>
    <string name="name">Name:</string>
    <string name="linkedin">LinkedIn</string>
    <string name="email">Email</string>
    <string name="instagram">Instagram</string>
    <string name="empty_data">No favorited food yet :)</string>
    <string name="copyright">Copyright 2020 © Andre Saftari</string>

    <!-- Menu -->
    <string name="menu_home">HOME</string>
    <string name="menu_favorite">FAVORITE</string>
    <string name="menu_about">ABOUT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>

    <!-- Profile -->
    <string name="profile_name">PRASIDYA PRAMADRESANA SAFTARI</string>
    <string name="profile_link">https://www.linkedin.com/in/prasidya-pramadresana-saftari/</string>
    <string name="profile_email">andresaftari@gmail.com</string>
    <string name="profile_instagram">instagram.com/andresaftari/</string>
</resources>